// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a component with a custom status icon 1`] = `
Object {
  "inapplicable": Array [
    Object {
      "description": "Ensures every accesskey attribute value is unique",
      "help": "accesskey attribute value must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/accesskeys?application=axeAPI",
      "id": "accesskeys",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "best-practice",
        "cat.keyboard",
      ],
    },
    Object {
      "description": "Ensures <area> elements of image maps have alternate text",
      "help": "Active <area> elements must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/area-alt?application=axeAPI",
      "id": "area-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "wcag244",
        "wcag412",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures ARIA attributes are allowed for an element's role",
      "help": "Elements must only use allowed ARIA attributes",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-allowed-attr?application=axeAPI",
      "id": "aria-allowed-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures role attribute has an appropriate value for the element",
      "help": "ARIA role must be appropriate for the element",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-allowed-role?application=axeAPI",
      "id": "aria-allowed-role",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures aria-hidden elements do not contain focusable elements",
      "help": "ARIA hidden element must not contain focusable elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-hidden-focus?application=axeAPI",
      "id": "aria-hidden-focus",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures every ARIA input field has an accessible name",
      "help": "ARIA input fields have an accessible name",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-input-field-name?application=axeAPI",
      "id": "aria-input-field-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures elements with ARIA roles have all required ARIA attributes",
      "help": "Required ARIA attributes must be provided",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-required-attr?application=axeAPI",
      "id": "aria-required-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures elements with an ARIA role that require child roles contain them",
      "help": "Certain ARIA roles must contain particular children",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-required-children?application=axeAPI",
      "id": "aria-required-children",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures elements with an ARIA role that require parent roles are contained by them",
      "help": "Certain ARIA roles must be contained by particular parents",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-required-parent?application=axeAPI",
      "id": "aria-required-parent",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensure aria-roledescription is only used on elements with an implicit or explicit role",
      "help": "Use aria-roledescription on elements with a semantic role",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-roledescription?application=axeAPI",
      "id": "aria-roledescription",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures all elements with a role attribute use a valid value",
      "help": "ARIA roles used must conform to valid values",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-roles?application=axeAPI",
      "id": "aria-roles",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures every ARIA toggle field has an accessible name",
      "help": "ARIA toggle fields have an accessible name",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-toggle-field-name?application=axeAPI",
      "id": "aria-toggle-field-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures all ARIA attributes have valid values",
      "help": "ARIA attributes must conform to valid values",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-valid-attr-value?application=axeAPI",
      "id": "aria-valid-attr-value",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures attributes that begin with aria- are valid ARIA attributes",
      "help": "ARIA attributes must conform to valid names",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-valid-attr?application=axeAPI",
      "id": "aria-valid-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensure the autocomplete attribute is correct and suitable for the form field",
      "help": "autocomplete attribute must be used correctly",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/autocomplete-valid?application=axeAPI",
      "id": "autocomplete-valid",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "wcag21aa",
        "wcag135",
      ],
    },
    Object {
      "description": "Ensure that text spacing set through style attributes can be adjusted with custom stylesheets",
      "help": "Inline text spacing must be adjustable with custom stylesheets",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/avoid-inline-spacing?application=axeAPI",
      "id": "avoid-inline-spacing",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag21aa",
        "wcag1412",
      ],
    },
    Object {
      "description": "Ensures <blink> elements are not used",
      "help": "<blink> elements are deprecated and must not be used",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/blink?application=axeAPI",
      "id": "blink",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.time-and-media",
        "wcag2a",
        "wcag222",
        "section508",
        "section508.22.j",
      ],
    },
    Object {
      "description": "Ensures buttons have discernible text",
      "help": "Buttons must have discernible text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/button-name?application=axeAPI",
      "id": "button-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures <dl> elements are structured correctly",
      "help": "<dl> elements must only directly contain properly-ordered <dt> and <dd> groups, <script>, <template> or <div> elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/definition-list?application=axeAPI",
      "id": "definition-list",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures <dt> and <dd> elements are contained by a <dl>",
      "help": "<dt> and <dd> elements must be contained by a <dl>",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/dlitem?application=axeAPI",
      "id": "dlitem",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures each HTML document contains a non-empty <title> element",
      "help": "Documents must have <title> element to aid in navigation",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/document-title?application=axeAPI",
      "id": "document-title",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag242",
      ],
    },
    Object {
      "description": "Ensures every id attribute value of active elements is unique",
      "help": "IDs of active elements must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/duplicate-id-active?application=axeAPI",
      "id": "duplicate-id-active",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag411",
      ],
    },
    Object {
      "description": "Ensures every id attribute value used in ARIA and in labels is unique",
      "help": "IDs used in ARIA and labels must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/duplicate-id-aria?application=axeAPI",
      "id": "duplicate-id-aria",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag411",
      ],
    },
    Object {
      "description": "Ensures every id attribute value is unique",
      "help": "id attribute value must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/duplicate-id?application=axeAPI",
      "id": "duplicate-id",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag411",
      ],
    },
    Object {
      "description": "Ensures headings have discernible text",
      "help": "Headings must not be empty",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/empty-heading?application=axeAPI",
      "id": "empty-heading",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures form field does not have multiple label elements",
      "help": "Form field should not have multiple label elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/form-field-multiple-labels?application=axeAPI",
      "id": "form-field-multiple-labels",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "wcag2a",
        "wcag332",
      ],
    },
    Object {
      "description": "Ensures <iframe> and <frame> elements contain the axe-core script",
      "help": "Frames must be tested with axe-core",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/frame-tested?application=axeAPI",
      "id": "frame-tested",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "review-item",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <iframe> and <frame> elements contain a unique title attribute",
      "help": "Frames must have a unique title attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/frame-title-unique?application=axeAPI",
      "id": "frame-title-unique",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <iframe> and <frame> elements contain a non-empty title attribute",
      "help": "Frames must have title attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/frame-title?application=axeAPI",
      "id": "frame-title",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag241",
        "wcag412",
        "section508",
        "section508.22.i",
      ],
    },
    Object {
      "description": "Ensures the order of headings is semantically correct",
      "help": "Heading levels should only increase by one",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/heading-order?application=axeAPI",
      "id": "heading-order",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures every HTML document has a lang attribute",
      "help": "<html> element must have a lang attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/html-has-lang?application=axeAPI",
      "id": "html-has-lang",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2a",
        "wcag311",
      ],
    },
    Object {
      "description": "Ensures the lang attribute of the <html> element has a valid value",
      "help": "<html> element must have a valid value for the lang attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/html-lang-valid?application=axeAPI",
      "id": "html-lang-valid",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2a",
        "wcag311",
      ],
    },
    Object {
      "description": "Ensure that HTML elements with both valid lang and xml:lang attributes agree on the base language of the page",
      "help": "HTML elements with lang and xml:lang must have the same base language",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/html-xml-lang-mismatch?application=axeAPI",
      "id": "html-xml-lang-mismatch",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2a",
        "wcag311",
      ],
    },
    Object {
      "description": "Ensure that links with the same accessible name serve a similar purpose",
      "help": "Links with the same name have a similar purpose",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/identical-links-same-purpose?application=axeAPI",
      "id": "identical-links-same-purpose",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2aaa",
        "wcag249",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures input buttons have discernible text",
      "help": "Input buttons must have discernible text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/input-button-name?application=axeAPI",
      "id": "input-button-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures <input type=\\"image\\"> elements have alternate text",
      "help": "Image buttons must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/input-image-alt?application=axeAPI",
      "id": "input-image-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures that every form element is not solely labeled using the title or aria-describedby attributes",
      "help": "Form elements should have a visible label",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/label-title-only?application=axeAPI",
      "id": "label-title-only",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures every form element has a label",
      "help": "Form elements must have labels",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/label?application=axeAPI",
      "id": "label",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "wcag2a",
        "wcag412",
        "wcag131",
        "section508",
        "section508.22.n",
      ],
    },
    Object {
      "description": "Ensures the banner landmark is at top level",
      "help": "Banner landmark must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-banner-is-top-level?application=axeAPI",
      "id": "landmark-banner-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the complementary landmark or aside is at top level",
      "help": "Aside must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-complementary-is-top-level?application=axeAPI",
      "id": "landmark-complementary-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the contentinfo landmark is at top level",
      "help": "Contentinfo landmark must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-contentinfo-is-top-level?application=axeAPI",
      "id": "landmark-contentinfo-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the main landmark is at top level",
      "help": "Main landmark must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-main-is-top-level?application=axeAPI",
      "id": "landmark-main-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has at most one banner landmark",
      "help": "Document must not have more than one banner landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-no-duplicate-banner?application=axeAPI",
      "id": "landmark-no-duplicate-banner",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has at most one contentinfo landmark",
      "help": "Document must not have more than one contentinfo landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-no-duplicate-contentinfo?application=axeAPI",
      "id": "landmark-no-duplicate-contentinfo",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has at most one main landmark",
      "help": "Document must not have more than one main landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-no-duplicate-main?application=axeAPI",
      "id": "landmark-no-duplicate-main",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has a main landmark",
      "help": "Document must have one main landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-one-main?application=axeAPI",
      "id": "landmark-one-main",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Landmarks must have a unique role or role/label/title (i.e. accessible name) combination",
      "help": "Ensures landmarks are unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-unique?application=axeAPI",
      "id": "landmark-unique",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures links have discernible text",
      "help": "Links must have discernible text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/link-name?application=axeAPI",
      "id": "link-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "wcag244",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures that lists are structured correctly",
      "help": "<ul> and <ol> must only directly contain <li>, <script> or <template> elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/list?application=axeAPI",
      "id": "list",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures <li> elements are used semantically",
      "help": "<li> elements must be contained in a <ul> or <ol>",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/listitem?application=axeAPI",
      "id": "listitem",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures <marquee> elements are not used",
      "help": "<marquee> elements are deprecated and must not be used",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/marquee?application=axeAPI",
      "id": "marquee",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag222",
      ],
    },
    Object {
      "description": "Ensures <meta http-equiv=\\"refresh\\"> is not used",
      "help": "Timed refresh must not exist",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/meta-refresh?application=axeAPI",
      "id": "meta-refresh",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.time-and-media",
        "wcag2a",
        "wcag2aaa",
        "wcag221",
        "wcag224",
        "wcag325",
      ],
    },
    Object {
      "description": "Ensures <meta name=\\"viewport\\"> can scale a significant amount",
      "help": "Users should be able to zoom and scale the text up to 500%",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/meta-viewport-large?application=axeAPI",
      "id": "meta-viewport-large",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.sensory-and-visual-cues",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <meta name=\\"viewport\\"> does not disable text scaling and zooming",
      "help": "Zooming and scaling must not be disabled",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/meta-viewport?application=axeAPI",
      "id": "meta-viewport",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.sensory-and-visual-cues",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <object> elements have alternate text",
      "help": "<object> elements must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/object-alt?application=axeAPI",
      "id": "object-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
      "help": "Page must contain a level-one heading",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/page-has-heading-one?application=axeAPI",
      "id": "page-has-heading-one",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures [role='img'] elements have alternate text",
      "help": "[role='img'] elements have an alternative text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/role-img-alt?application=axeAPI",
      "id": "role-img-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures the scope attribute is used correctly on tables",
      "help": "scope attribute should be used correctly",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/scope-attr-valid?application=axeAPI",
      "id": "scope-attr-valid",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "best-practice",
      ],
    },
    Object {
      "description": "Elements that have scrollable content should be accessible by keyboard",
      "help": "Ensure that scrollable region has keyboard access",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/scrollable-region-focusable?application=axeAPI",
      "id": "scrollable-region-focusable",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2a",
        "wcag211",
      ],
    },
    Object {
      "description": "Ensures that server-side image maps are not used",
      "help": "Server-side image maps must not be used",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/server-side-image-map?application=axeAPI",
      "id": "server-side-image-map",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag211",
        "section508",
        "section508.22.f",
      ],
    },
    Object {
      "description": "Ensure all skip links have a focusable target",
      "help": "The skip-link target should exist and be focusable",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/skip-link?application=axeAPI",
      "id": "skip-link",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.keyboard",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures svg elements with an img, graphics-document or graphics-symbol role have an accessible text",
      "help": "svg elements with an img role have an alternative text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/svg-img-alt?application=axeAPI",
      "id": "svg-img-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures tabindex attribute values are not greater than 0",
      "help": "Elements should not have tabindex greater than zero",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/tabindex?application=axeAPI",
      "id": "tabindex",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.keyboard",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensure that tables do not have the same summary and caption",
      "help": "The <caption> element should not contain the same text as the summary attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/table-duplicate-name?application=axeAPI",
      "id": "table-duplicate-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensure that each cell in a table using the headers refers to another cell in that table",
      "help": "All cells in a table element that use the headers attribute must only refer to other cells of that same table",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/td-headers-attr?application=axeAPI",
      "id": "td-headers-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "wcag2a",
        "wcag131",
        "section508",
        "section508.22.g",
      ],
    },
    Object {
      "description": "Ensure that each table header in a data table refers to data cells",
      "help": "All th elements and elements with role=columnheader/rowheader must have data cells they describe",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/th-has-data-cells?application=axeAPI",
      "id": "th-has-data-cells",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "wcag2a",
        "wcag131",
        "section508",
        "section508.22.g",
      ],
    },
    Object {
      "description": "Ensures lang attributes have valid values",
      "help": "lang attribute must have a valid value",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/valid-lang?application=axeAPI",
      "id": "valid-lang",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2aa",
        "wcag312",
      ],
    },
    Object {
      "description": "Ensures <video> elements have captions",
      "help": "<video> elements must have captions",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/video-caption?application=axeAPI",
      "id": "video-caption",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag122",
        "section508",
        "section508.22.a",
      ],
    },
  ],
  "incomplete": Array [
    Object {
      "description": "Ensures the contrast between foreground and background colors meets WCAG 2 AA contrast ratio thresholds",
      "error": [SupportError: \`TypeError: document.createRange is not a function\` - feature unsupported in your environment. Skipping color-contrast rule.],
      "errorNode": undefined,
      "help": "Elements must have sufficient color contrast",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/color-contrast?application=axeAPI",
      "id": "color-contrast",
      "impact": null,
      "message": "\`TypeError: document.createRange is not a function\` - feature unsupported in your environment. Skipping color-contrast rule.",
      "nodes": Array [],
      "stack": "Error: 
    at new SupportError (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:53:18)
    at Rule.Object.<anonymous>.Rule.run (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:9178:14)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:8593:12
    at pop (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13066:18)
    at Object.defer (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13088:11)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:8621:21
    at Array.forEach (<anonymous>)
    at Audit.Object.<anonymous>.Audit.run (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:8620:17)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:10177:13
    at pop (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13066:18)
    at Object.defer (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13088:11)
    at Object.runRules [as _runRules] (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:10173:7)
    at Object.<anonymous>.axe.run (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:10354:9)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-axe/index.js:57:15
    at new Promise (<anonymous>)
    at axe (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-axe/index.js:56:12)
    at _callee3$ (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/src/components/Card/AssetCard/AssetCard.test.tsx:149:25)
    at tryCatch (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/regenerator-runtime/runtime.js:45:40)
    at Generator.invoke [as _invoke] (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/regenerator-runtime/runtime.js:274:22)
    at Generator.prototype.<computed> [as next] (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/regenerator-runtime/runtime.js:97:21)
    at asyncGeneratorStep (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:3:24)
    at _next (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:25:9)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:32:7
    at new Promise (<anonymous>)
    at Object.<anonymous> (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:21:12)
    at Object.asyncJestTest (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/queueRunner.js:43:12
    at new Promise (<anonymous>)
    at mapper (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/queueRunner.js:73:41",
      "tags": Array [
        "cat.color",
        "wcag2aa",
        "wcag143",
      ],
    },
  ],
  "passes": Array [
    Object {
      "description": "Ensures aria-hidden='true' is not present on the document body.",
      "help": "aria-hidden='true' must not be present on the document body",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-hidden-body?application=axeAPI",
      "id": "aria-hidden-body",
      "impact": null,
      "nodes": Array [
        Object {
          "all": Array [],
          "any": Array [
            CheckResult {
              "data": null,
              "id": "aria-hidden-body",
              "impact": "critical",
              "message": "No aria-hidden attribute is present on document body",
              "relatedNodes": Array [],
            },
          ],
          "html": "<body>",
          "impact": null,
          "none": Array [],
          "target": Array [
            "body",
          ],
        },
      ],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures <img> elements have alternate text or a role of none or presentation",
      "help": "Images must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/image-alt?application=axeAPI",
      "id": "image-alt",
      "impact": null,
      "nodes": Array [
        Object {
          "all": Array [],
          "any": Array [
            CheckResult {
              "data": null,
              "id": "has-alt",
              "impact": "critical",
              "message": "Element has an alt attribute",
              "relatedNodes": Array [],
            },
          ],
          "html": "<img class=\\"Asset__image-container__image\\" src=\\"http://placekitten.com/200/300\\" alt=\\"picture of a cat\\">",
          "impact": null,
          "none": Array [
            CheckResult {
              "data": null,
              "id": "alt-space-value",
              "impact": "critical",
              "message": "Element has a valid alt attribute value",
              "relatedNodes": Array [],
            },
          ],
          "target": Array [
            "img",
          ],
        },
      ],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensure image alternative is not repeated as text",
      "help": "Alternative text of images should not be repeated as text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/image-redundant-alt?application=axeAPI",
      "id": "image-redundant-alt",
      "impact": null,
      "nodes": Array [
        Object {
          "all": Array [],
          "any": Array [],
          "html": "<img class=\\"Asset__image-container__image\\" src=\\"http://placekitten.com/200/300\\" alt=\\"picture of a cat\\">",
          "impact": null,
          "none": Array [
            CheckResult {
              "data": null,
              "id": "duplicate-img-label",
              "impact": "minor",
              "message": "Element does not duplicate existing text in <img> alt text",
              "relatedNodes": Array [],
            },
          ],
          "target": Array [
            "img",
          ],
        },
      ],
      "tags": Array [
        "cat.text-alternatives",
        "best-practice",
      ],
    },
  ],
  "testEngine": Object {
    "name": "axe-core",
    "version": "3.5.3",
  },
  "testEnvironment": Object {
    "orientationAngle": undefined,
    "orientationType": undefined,
    "userAgent": "Mozilla/5.0 (darwin) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
    "windowHeight": 768,
    "windowWidth": 1024,
  },
  "testRunner": Object {
    "name": "axe",
  },
  "timestamp": "2020-11-04T17:17:09.326Z",
  "toolOptions": Object {
    "reporter": "v1",
    "rules": Object {
      "region": Object {
        "enabled": false,
      },
    },
  },
  "url": "http://localhost/",
  "violations": Array [],
}
`;

exports[`renders a component with a status icon 1`] = `
Object {
  "inapplicable": Array [
    Object {
      "description": "Ensures every accesskey attribute value is unique",
      "help": "accesskey attribute value must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/accesskeys?application=axeAPI",
      "id": "accesskeys",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "best-practice",
        "cat.keyboard",
      ],
    },
    Object {
      "description": "Ensures <area> elements of image maps have alternate text",
      "help": "Active <area> elements must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/area-alt?application=axeAPI",
      "id": "area-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "wcag244",
        "wcag412",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures ARIA attributes are allowed for an element's role",
      "help": "Elements must only use allowed ARIA attributes",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-allowed-attr?application=axeAPI",
      "id": "aria-allowed-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures role attribute has an appropriate value for the element",
      "help": "ARIA role must be appropriate for the element",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-allowed-role?application=axeAPI",
      "id": "aria-allowed-role",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures aria-hidden elements do not contain focusable elements",
      "help": "ARIA hidden element must not contain focusable elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-hidden-focus?application=axeAPI",
      "id": "aria-hidden-focus",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures every ARIA input field has an accessible name",
      "help": "ARIA input fields have an accessible name",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-input-field-name?application=axeAPI",
      "id": "aria-input-field-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures elements with ARIA roles have all required ARIA attributes",
      "help": "Required ARIA attributes must be provided",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-required-attr?application=axeAPI",
      "id": "aria-required-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures elements with an ARIA role that require child roles contain them",
      "help": "Certain ARIA roles must contain particular children",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-required-children?application=axeAPI",
      "id": "aria-required-children",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures elements with an ARIA role that require parent roles are contained by them",
      "help": "Certain ARIA roles must be contained by particular parents",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-required-parent?application=axeAPI",
      "id": "aria-required-parent",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensure aria-roledescription is only used on elements with an implicit or explicit role",
      "help": "Use aria-roledescription on elements with a semantic role",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-roledescription?application=axeAPI",
      "id": "aria-roledescription",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures all elements with a role attribute use a valid value",
      "help": "ARIA roles used must conform to valid values",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-roles?application=axeAPI",
      "id": "aria-roles",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures every ARIA toggle field has an accessible name",
      "help": "ARIA toggle fields have an accessible name",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-toggle-field-name?application=axeAPI",
      "id": "aria-toggle-field-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures all ARIA attributes have valid values",
      "help": "ARIA attributes must conform to valid values",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-valid-attr-value?application=axeAPI",
      "id": "aria-valid-attr-value",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures attributes that begin with aria- are valid ARIA attributes",
      "help": "ARIA attributes must conform to valid names",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-valid-attr?application=axeAPI",
      "id": "aria-valid-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensure the autocomplete attribute is correct and suitable for the form field",
      "help": "autocomplete attribute must be used correctly",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/autocomplete-valid?application=axeAPI",
      "id": "autocomplete-valid",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "wcag21aa",
        "wcag135",
      ],
    },
    Object {
      "description": "Ensure that text spacing set through style attributes can be adjusted with custom stylesheets",
      "help": "Inline text spacing must be adjustable with custom stylesheets",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/avoid-inline-spacing?application=axeAPI",
      "id": "avoid-inline-spacing",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag21aa",
        "wcag1412",
      ],
    },
    Object {
      "description": "Ensures <blink> elements are not used",
      "help": "<blink> elements are deprecated and must not be used",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/blink?application=axeAPI",
      "id": "blink",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.time-and-media",
        "wcag2a",
        "wcag222",
        "section508",
        "section508.22.j",
      ],
    },
    Object {
      "description": "Ensures buttons have discernible text",
      "help": "Buttons must have discernible text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/button-name?application=axeAPI",
      "id": "button-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures <dl> elements are structured correctly",
      "help": "<dl> elements must only directly contain properly-ordered <dt> and <dd> groups, <script>, <template> or <div> elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/definition-list?application=axeAPI",
      "id": "definition-list",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures <dt> and <dd> elements are contained by a <dl>",
      "help": "<dt> and <dd> elements must be contained by a <dl>",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/dlitem?application=axeAPI",
      "id": "dlitem",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures each HTML document contains a non-empty <title> element",
      "help": "Documents must have <title> element to aid in navigation",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/document-title?application=axeAPI",
      "id": "document-title",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag242",
      ],
    },
    Object {
      "description": "Ensures every id attribute value of active elements is unique",
      "help": "IDs of active elements must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/duplicate-id-active?application=axeAPI",
      "id": "duplicate-id-active",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag411",
      ],
    },
    Object {
      "description": "Ensures every id attribute value used in ARIA and in labels is unique",
      "help": "IDs used in ARIA and labels must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/duplicate-id-aria?application=axeAPI",
      "id": "duplicate-id-aria",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag411",
      ],
    },
    Object {
      "description": "Ensures every id attribute value is unique",
      "help": "id attribute value must be unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/duplicate-id?application=axeAPI",
      "id": "duplicate-id",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag411",
      ],
    },
    Object {
      "description": "Ensures headings have discernible text",
      "help": "Headings must not be empty",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/empty-heading?application=axeAPI",
      "id": "empty-heading",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures form field does not have multiple label elements",
      "help": "Form field should not have multiple label elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/form-field-multiple-labels?application=axeAPI",
      "id": "form-field-multiple-labels",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "wcag2a",
        "wcag332",
      ],
    },
    Object {
      "description": "Ensures <iframe> and <frame> elements contain the axe-core script",
      "help": "Frames must be tested with axe-core",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/frame-tested?application=axeAPI",
      "id": "frame-tested",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "review-item",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <iframe> and <frame> elements contain a unique title attribute",
      "help": "Frames must have a unique title attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/frame-title-unique?application=axeAPI",
      "id": "frame-title-unique",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <iframe> and <frame> elements contain a non-empty title attribute",
      "help": "Frames must have title attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/frame-title?application=axeAPI",
      "id": "frame-title",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag241",
        "wcag412",
        "section508",
        "section508.22.i",
      ],
    },
    Object {
      "description": "Ensures the order of headings is semantically correct",
      "help": "Heading levels should only increase by one",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/heading-order?application=axeAPI",
      "id": "heading-order",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures every HTML document has a lang attribute",
      "help": "<html> element must have a lang attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/html-has-lang?application=axeAPI",
      "id": "html-has-lang",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2a",
        "wcag311",
      ],
    },
    Object {
      "description": "Ensures the lang attribute of the <html> element has a valid value",
      "help": "<html> element must have a valid value for the lang attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/html-lang-valid?application=axeAPI",
      "id": "html-lang-valid",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2a",
        "wcag311",
      ],
    },
    Object {
      "description": "Ensure that HTML elements with both valid lang and xml:lang attributes agree on the base language of the page",
      "help": "HTML elements with lang and xml:lang must have the same base language",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/html-xml-lang-mismatch?application=axeAPI",
      "id": "html-xml-lang-mismatch",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2a",
        "wcag311",
      ],
    },
    Object {
      "description": "Ensure that links with the same accessible name serve a similar purpose",
      "help": "Links with the same name have a similar purpose",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/identical-links-same-purpose?application=axeAPI",
      "id": "identical-links-same-purpose",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2aaa",
        "wcag249",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures input buttons have discernible text",
      "help": "Input buttons must have discernible text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/input-button-name?application=axeAPI",
      "id": "input-button-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures <input type=\\"image\\"> elements have alternate text",
      "help": "Image buttons must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/input-image-alt?application=axeAPI",
      "id": "input-image-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures that every form element is not solely labeled using the title or aria-describedby attributes",
      "help": "Form elements should have a visible label",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/label-title-only?application=axeAPI",
      "id": "label-title-only",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures every form element has a label",
      "help": "Form elements must have labels",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/label?application=axeAPI",
      "id": "label",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.forms",
        "wcag2a",
        "wcag412",
        "wcag131",
        "section508",
        "section508.22.n",
      ],
    },
    Object {
      "description": "Ensures the banner landmark is at top level",
      "help": "Banner landmark must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-banner-is-top-level?application=axeAPI",
      "id": "landmark-banner-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the complementary landmark or aside is at top level",
      "help": "Aside must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-complementary-is-top-level?application=axeAPI",
      "id": "landmark-complementary-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the contentinfo landmark is at top level",
      "help": "Contentinfo landmark must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-contentinfo-is-top-level?application=axeAPI",
      "id": "landmark-contentinfo-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the main landmark is at top level",
      "help": "Main landmark must not be contained in another landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-main-is-top-level?application=axeAPI",
      "id": "landmark-main-is-top-level",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has at most one banner landmark",
      "help": "Document must not have more than one banner landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-no-duplicate-banner?application=axeAPI",
      "id": "landmark-no-duplicate-banner",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has at most one contentinfo landmark",
      "help": "Document must not have more than one contentinfo landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-no-duplicate-contentinfo?application=axeAPI",
      "id": "landmark-no-duplicate-contentinfo",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has at most one main landmark",
      "help": "Document must not have more than one main landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-no-duplicate-main?application=axeAPI",
      "id": "landmark-no-duplicate-main",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures the document has a main landmark",
      "help": "Document must have one main landmark",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-one-main?application=axeAPI",
      "id": "landmark-one-main",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Landmarks must have a unique role or role/label/title (i.e. accessible name) combination",
      "help": "Ensures landmarks are unique",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/landmark-unique?application=axeAPI",
      "id": "landmark-unique",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures links have discernible text",
      "help": "Links must have discernible text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/link-name?application=axeAPI",
      "id": "link-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.name-role-value",
        "wcag2a",
        "wcag412",
        "wcag244",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures that lists are structured correctly",
      "help": "<ul> and <ol> must only directly contain <li>, <script> or <template> elements",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/list?application=axeAPI",
      "id": "list",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures <li> elements are used semantically",
      "help": "<li> elements must be contained in a <ul> or <ol>",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/listitem?application=axeAPI",
      "id": "listitem",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.structure",
        "wcag2a",
        "wcag131",
      ],
    },
    Object {
      "description": "Ensures <marquee> elements are not used",
      "help": "<marquee> elements are deprecated and must not be used",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/marquee?application=axeAPI",
      "id": "marquee",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.parsing",
        "wcag2a",
        "wcag222",
      ],
    },
    Object {
      "description": "Ensures <meta http-equiv=\\"refresh\\"> is not used",
      "help": "Timed refresh must not exist",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/meta-refresh?application=axeAPI",
      "id": "meta-refresh",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.time-and-media",
        "wcag2a",
        "wcag2aaa",
        "wcag221",
        "wcag224",
        "wcag325",
      ],
    },
    Object {
      "description": "Ensures <meta name=\\"viewport\\"> can scale a significant amount",
      "help": "Users should be able to zoom and scale the text up to 500%",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/meta-viewport-large?application=axeAPI",
      "id": "meta-viewport-large",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.sensory-and-visual-cues",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <meta name=\\"viewport\\"> does not disable text scaling and zooming",
      "help": "Zooming and scaling must not be disabled",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/meta-viewport?application=axeAPI",
      "id": "meta-viewport",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.sensory-and-visual-cues",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures <object> elements have alternate text",
      "help": "<object> elements must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/object-alt?application=axeAPI",
      "id": "object-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
      "help": "Page must contain a level-one heading",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/page-has-heading-one?application=axeAPI",
      "id": "page-has-heading-one",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.semantics",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures [role='img'] elements have alternate text",
      "help": "[role='img'] elements have an alternative text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/role-img-alt?application=axeAPI",
      "id": "role-img-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures the scope attribute is used correctly on tables",
      "help": "scope attribute should be used correctly",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/scope-attr-valid?application=axeAPI",
      "id": "scope-attr-valid",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "best-practice",
      ],
    },
    Object {
      "description": "Elements that have scrollable content should be accessible by keyboard",
      "help": "Ensure that scrollable region has keyboard access",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/scrollable-region-focusable?application=axeAPI",
      "id": "scrollable-region-focusable",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "wcag2a",
        "wcag211",
      ],
    },
    Object {
      "description": "Ensures that server-side image maps are not used",
      "help": "Server-side image maps must not be used",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/server-side-image-map?application=axeAPI",
      "id": "server-side-image-map",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag211",
        "section508",
        "section508.22.f",
      ],
    },
    Object {
      "description": "Ensure all skip links have a focusable target",
      "help": "The skip-link target should exist and be focusable",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/skip-link?application=axeAPI",
      "id": "skip-link",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.keyboard",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensures svg elements with an img, graphics-document or graphics-symbol role have an accessible text",
      "help": "svg elements with an img role have an alternative text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/svg-img-alt?application=axeAPI",
      "id": "svg-img-alt",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensures tabindex attribute values are not greater than 0",
      "help": "Elements should not have tabindex greater than zero",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/tabindex?application=axeAPI",
      "id": "tabindex",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.keyboard",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensure that tables do not have the same summary and caption",
      "help": "The <caption> element should not contain the same text as the summary attribute",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/table-duplicate-name?application=axeAPI",
      "id": "table-duplicate-name",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "best-practice",
      ],
    },
    Object {
      "description": "Ensure that each cell in a table using the headers refers to another cell in that table",
      "help": "All cells in a table element that use the headers attribute must only refer to other cells of that same table",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/td-headers-attr?application=axeAPI",
      "id": "td-headers-attr",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "wcag2a",
        "wcag131",
        "section508",
        "section508.22.g",
      ],
    },
    Object {
      "description": "Ensure that each table header in a data table refers to data cells",
      "help": "All th elements and elements with role=columnheader/rowheader must have data cells they describe",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/th-has-data-cells?application=axeAPI",
      "id": "th-has-data-cells",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.tables",
        "wcag2a",
        "wcag131",
        "section508",
        "section508.22.g",
      ],
    },
    Object {
      "description": "Ensures lang attributes have valid values",
      "help": "lang attribute must have a valid value",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/valid-lang?application=axeAPI",
      "id": "valid-lang",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.language",
        "wcag2aa",
        "wcag312",
      ],
    },
    Object {
      "description": "Ensures <video> elements have captions",
      "help": "<video> elements must have captions",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/video-caption?application=axeAPI",
      "id": "video-caption",
      "impact": null,
      "nodes": Array [],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag122",
        "section508",
        "section508.22.a",
      ],
    },
  ],
  "incomplete": Array [
    Object {
      "description": "Ensures the contrast between foreground and background colors meets WCAG 2 AA contrast ratio thresholds",
      "error": [SupportError: \`TypeError: document.createRange is not a function\` - feature unsupported in your environment. Skipping color-contrast rule.],
      "errorNode": undefined,
      "help": "Elements must have sufficient color contrast",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/color-contrast?application=axeAPI",
      "id": "color-contrast",
      "impact": null,
      "message": "\`TypeError: document.createRange is not a function\` - feature unsupported in your environment. Skipping color-contrast rule.",
      "nodes": Array [],
      "stack": "Error: 
    at new SupportError (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:53:18)
    at Rule.Object.<anonymous>.Rule.run (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:9178:14)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:8593:12
    at pop (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13066:18)
    at Object.defer (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13088:11)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:8621:21
    at Array.forEach (<anonymous>)
    at Audit.Object.<anonymous>.Audit.run (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:8620:17)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:10177:13
    at pop (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13066:18)
    at Object.defer (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:13088:11)
    at Object.runRules [as _runRules] (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:10173:7)
    at Object.<anonymous>.axe.run (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/axe-core/axe.js:10354:9)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-axe/index.js:57:15
    at new Promise (<anonymous>)
    at axe (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-axe/index.js:56:12)
    at _callee2$ (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/src/components/Card/AssetCard/AssetCard.test.tsx:136:25)
    at tryCatch (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/regenerator-runtime/runtime.js:45:40)
    at Generator.invoke [as _invoke] (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/regenerator-runtime/runtime.js:274:22)
    at Generator.prototype.<computed> [as next] (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/regenerator-runtime/runtime.js:97:21)
    at asyncGeneratorStep (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:3:24)
    at _next (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:25:9)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:32:7
    at new Promise (<anonymous>)
    at Object.<anonymous> (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/@babel/runtime/helpers/asyncToGenerator.js:21:12)
    at Object.asyncJestTest (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/queueRunner.js:43:12
    at new Promise (<anonymous>)
    at mapper (/Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at /Users/daniel/Programming/forma-36/packages/forma-36-react-components/node_modules/jest-jasmine2/build/queueRunner.js:73:41",
      "tags": Array [
        "cat.color",
        "wcag2aa",
        "wcag143",
      ],
    },
  ],
  "passes": Array [
    Object {
      "description": "Ensures aria-hidden='true' is not present on the document body.",
      "help": "aria-hidden='true' must not be present on the document body",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/aria-hidden-body?application=axeAPI",
      "id": "aria-hidden-body",
      "impact": null,
      "nodes": Array [
        Object {
          "all": Array [],
          "any": Array [
            CheckResult {
              "data": null,
              "id": "aria-hidden-body",
              "impact": "critical",
              "message": "No aria-hidden attribute is present on document body",
              "relatedNodes": Array [],
            },
          ],
          "html": "<body>",
          "impact": null,
          "none": Array [],
          "target": Array [
            "body",
          ],
        },
      ],
      "tags": Array [
        "cat.aria",
        "wcag2a",
        "wcag412",
      ],
    },
    Object {
      "description": "Ensures <img> elements have alternate text or a role of none or presentation",
      "help": "Images must have alternate text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/image-alt?application=axeAPI",
      "id": "image-alt",
      "impact": null,
      "nodes": Array [
        Object {
          "all": Array [],
          "any": Array [
            CheckResult {
              "data": null,
              "id": "has-alt",
              "impact": "critical",
              "message": "Element has an alt attribute",
              "relatedNodes": Array [],
            },
          ],
          "html": "<img class=\\"Asset__image-container__image\\" src=\\"http://placekitten.com/200/300\\" alt=\\"picture of a cat\\">",
          "impact": null,
          "none": Array [
            CheckResult {
              "data": null,
              "id": "alt-space-value",
              "impact": "critical",
              "message": "Element has a valid alt attribute value",
              "relatedNodes": Array [],
            },
          ],
          "target": Array [
            "img",
          ],
        },
      ],
      "tags": Array [
        "cat.text-alternatives",
        "wcag2a",
        "wcag111",
        "section508",
        "section508.22.a",
      ],
    },
    Object {
      "description": "Ensure image alternative is not repeated as text",
      "help": "Alternative text of images should not be repeated as text",
      "helpUrl": "https://dequeuniversity.com/rules/axe/3.5/image-redundant-alt?application=axeAPI",
      "id": "image-redundant-alt",
      "impact": null,
      "nodes": Array [
        Object {
          "all": Array [],
          "any": Array [],
          "html": "<img class=\\"Asset__image-container__image\\" src=\\"http://placekitten.com/200/300\\" alt=\\"picture of a cat\\">",
          "impact": null,
          "none": Array [
            CheckResult {
              "data": null,
              "id": "duplicate-img-label",
              "impact": "minor",
              "message": "Element does not duplicate existing text in <img> alt text",
              "relatedNodes": Array [],
            },
          ],
          "target": Array [
            "img",
          ],
        },
      ],
      "tags": Array [
        "cat.text-alternatives",
        "best-practice",
      ],
    },
  ],
  "testEngine": Object {
    "name": "axe-core",
    "version": "3.5.3",
  },
  "testEnvironment": Object {
    "orientationAngle": undefined,
    "orientationType": undefined,
    "userAgent": "Mozilla/5.0 (darwin) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
    "windowHeight": 768,
    "windowWidth": 1024,
  },
  "testRunner": Object {
    "name": "axe",
  },
  "timestamp": "2020-11-04T17:17:09.297Z",
  "toolOptions": Object {
    "reporter": "v1",
    "rules": Object {
      "region": Object {
        "enabled": false,
      },
    },
  },
  "url": "http://localhost/",
  "violations": Array [],
}
`;

exports[`renders a small variant of the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-small Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="http://placekitten.com/200/300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="http://placekitten.com/200/300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component in loading state 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <svg
    aria-label="Loading component..."
    class="SkeletonContainer"
    data-test-id="cf-ui-skeleton-form"
    height="100%"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    width="240"
  >
    <title>
      Loading component...
    </title>
    <rect
      clip-path="url(#f36-asset-card-skeleton)"
      height="100%"
      style="fill: url(#cf-ui-skeleton-clip-gradient-0);"
      width="100%"
      x="0"
      y="0"
    />
    <defs>
      <clippath
        id="f36-asset-card-skeleton"
      >
        <rect
          height="70"
          rx="0"
          ry="0"
          width="70"
          x="85"
          y="100"
        />
        <rect
          height="16"
          rx="0"
          ry="0"
          width="100"
          x="70"
          y="190"
        />
      </clippath>
      <lineargradient
        id="cf-ui-skeleton-clip-gradient-0"
      >
        <stop
          offset="0%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            dur="2s"
            id="animation-1"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="50%"
          stop-color="#f7f9fa"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-1.begin+0.25s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="100%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-1.begin+0.5s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
      </lineargradient>
    </defs>
  </svg>
</div>
`;

exports[`renders the component with a custom drag handle 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="Icon Icon--small Icon--muted"
      data-test-id="cf-ui-icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder card
    </span>
  </div>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="http://placekitten.com/200/300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with a drag handle 1`] = `
<div>
  <div
    aria-label="picture of a cat"
    class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
    data-test-id="cf-ui-asset-card"
    title="picture of a cat"
  >
    <div
      class="CardDragHandle"
      data-test-id="cf-ui-card-drag-handle"
    >
      <svg
        class="Icon Icon--small Icon--muted"
        data-test-id="cf-ui-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="CardDragHandle__sr-label"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="AssetCard__wrapper"
    >
      <div
        class="AssetCard__header"
      />
      <div
        class="AssetCard__content"
      >
        <div
          class="Asset AssetCard__asset"
          data-test-id="cf-ui-asset"
        >
          <div
            class="Asset__image-container"
          >
            <img
              alt="picture of a cat"
              class="Asset__image-container__image"
              src="http://placekitten.com/200/300"
            />
          </div>
          <div
            class="Asset__title-container"
          >
            <span
              class="Asset__title-container__title"
            >
              picture of a cat
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with actions 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="Dropdown AssetCard__actions"
        data-test-id="cf-ui-card-actions"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="IconButton IconButton--secondary"
          data-test-id="cf-ui-icon-button"
          type="button"
        >
          <span
            class="TabFocusTrap IconButton__inner"
            tabindex="-1"
          >
            <svg
              class="Icon Icon--small Icon--primary IconButton__icon"
              data-test-id="cf-ui-icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="IconButton__label"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="http://placekitten.com/200/300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="http://placekitten.com/200/300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with status 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="Tag Tag--negative"
        data-test-id="cf-ui-tag"
        style="margin-left: auto;"
      >
        archived
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__asset-container"
        >
          <div
            class="Asset__illustration-container"
          >
            <svg
              class="Illustration"
              data-test-id="cf-ui-asset-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-miterlimit="10"
              >
                <path
                  d="M19.5 23.5H.5V.5h13l6 6z"
                />
                <path
                  d="M13.5.5v6h6M13 11l-3 5.5-2-2-2.5 5h10z"
                />
                <circle
                  cx="7"
                  cy="9"
                  r="1.5"
                />
              </g>
            </svg>
          </div>
          <span
            class="Asset__asset-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component without actions 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="http://placekitten.com/200/300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
